--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/knex": "^0.16.1",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
